--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,64 @@
   box-sizing: border-box;
 }
 
+.header {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 9vh;
+  padding: 0 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__heading {
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+}
+
+.header__container__border {
+  width: 40px;
+  height: 20px;
+  background-color: rgb(166, 167, 167);
+  border: 2px black solid;
+  border-radius: 20px;
+  position: relative;
+}
+
+.header__container__border__circle {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  transition: left 0.3s linear;
+}
+
+.header__container__border__circle--on {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  left: 18px;
+  top: -2px;
+}
+
+.header__container__text {
+  font-weight: bold;
+}
+
 .App {
   text-align: center;
-  background-color: white;
+  background-color: #ecebeb;
 }
 
 .nav-links {
