--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,17 @@
   justify-content: space-between;
 }
 
+.header--dark {
+  background-color: rgb(100, 100, 100);
+  color: white;
+  width: 100%;
+  height: 9vh;
+  padding: 0 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header__heading {
   font-weight: bold;
   font-size: 1.3rem;
@@ -86,6 +97,18 @@
   justify-content: space-between;
   text-decoration: none;
   color: black;
+}
+
+.country--dark {
+  width: 24%;
+  text-align: left;
+  padding: 5px;
+  background-color: rgb(100, 100, 100);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-decoration: none;
+  color: white;
 }
 
 .country img {
